--- a/RED.qsf
+++ b/RED.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY RED
+set_global_assignment -name TOP_LEVEL_ENTITY RED_ALU
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:52:53  APRIL 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
@@ -48,9 +48,6 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_PC.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_INST_MEM.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_CONTROL_UNIT.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_REGISTER_FILE.vhd
@@ -65,4 +62,9 @@ set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_SL_BY_2.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ADDER_PC_P4.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ADDER_FOR_BRANCH.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
