--- a/RED.qsf
+++ b/RED.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY RED_DATA_MEM
+set_global_assignment -name TOP_LEVEL_ENTITY RED_STAGE2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:52:53  APRIL 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
@@ -66,7 +66,10 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE1.vhd
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE2.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_IMM_GEN.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
