--- a/RED.qsf
+++ b/RED.qsf
@@ -36,22 +36,26 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY RED_STAGE2
+set_global_assignment -name FAMILY "Cyclone IV GX"
+set_global_assignment -name DEVICE EP4CGX150DF31I7AD
+set_global_assignment -name TOP_LEVEL_ENTITY RED_STAGE3
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:52:53  APRIL 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 100
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_SL_BY_1.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_PC.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_INST_MEM.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_CONTROL_UNIT.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_REGISTER_FILE.vhd
-set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_SIGN_EXTEND.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ALU_CONTROL_UNIT.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ALU.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_MUX_FOR_ALU_SRC.vhd
@@ -59,17 +63,14 @@ set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_MUX_FOR_MEM_TO_REG.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_MUX_FOR_RED_PC.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_DATA_MEM.vhd
-set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_SL_BY_2.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ADDER_PC_P4.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_ADDER_FOR_BRANCH.vhd
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE1.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE2.vhd
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_IMM_GEN.vhd
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE3.vhd
+set_global_assignment -name SOURCE_FILE //wsl.localhost/Ubuntu/home/gaith/red/db/RED.cmp.rdb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_IMM_GEN.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
