--- a/RED.qsf
+++ b/RED.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV GX"
 set_global_assignment -name DEVICE EP4CGX150DF31I7AD
-set_global_assignment -name TOP_LEVEL_ENTITY RED_STAGE3
+set_global_assignment -name TOP_LEVEL_ENTITY RED_STAGE4
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:52:53  APRIL 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
@@ -70,6 +70,7 @@ set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_IMM_GEN.vhd
 set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE3.vhd
 set_global_assignment -name SOURCE_FILE //wsl.localhost/Ubuntu/home/gaith/red/db/RED.cmp.rdb
+set_global_assignment -name VHDL_FILE //wsl.localhost/Ubuntu/home/gaith/red/RED_STAGE4.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
