--- a/RED.qsf
+++ b/RED.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV GX"
 set_global_assignment -name DEVICE EP4CGX150DF31I7AD
-set_global_assignment -name TOP_LEVEL_ENTITY RED
+set_global_assignment -name TOP_LEVEL_ENTITY RED_DATA_MEM
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:52:53  APRIL 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
